# enrichment-confidence-roi

./: .gitignore  PRD.md  pyproject.toml
docs/: stage1_data_dag_spec.md  stage1_dgp_design.md
src/ecc/: config.py  utils.py
src/ecc/dgp/: generate.py  schemas.py
